--- a/resume2.html
+++ b/resume2.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewpoint" content="width=device-width, initial-scale=0.1">
-    <link rel="icon" type="image/x-icon" href="Images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/apple-touch-icon.png">
     <title>Chulumanco's resume</title>
   </head>
   <body>
     <h1>Chulumanco Simama</h1>
    <p>An introductory personal statement.</p>
-  <img src="Images/9BA1C7F5-4330-4E69-BA2E-7AB24353AFD7 2.jpg" alt="Picture of Chulumanco" style="height:500px;width:350px;">
+  <img src="images/9BA1C7F5-4330-4E69-BA2E-7AB24353AFD7 2.jpg" alt="Picture of Chulumanco" style="height:500px;width:350px;">
   <ul>
-    <li><a href="#education">Education</a></li>
-    <li><a href="#experience">Experience</a></li>
-    <li><a href="#skills">Skills</a></li>
-    <li><a href="#contact details">Contact</a></li>
+    <li><a href="#Education">Education</a></li>
+    <li><a href="#Experience">Experience</a></li>
+    <li><a href="#Skills">Skills</a></li>
+    <li><a href="#Contact details">Contact</a></li>
   </ul>
   <p><h2>Education</h2></p>
   <p><h3>Intro to web at <a href="https://www.codespace.co.za" target="_blank" CodeSpace Academy></a></h3></p>
